# Nexus

./: .gitignore  CLAUDE.md  LICENSE  README.md  launcher.ps1  nexus.toml.example  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  efficiency.py  results.json  results.md
src/nexus/: __init__.py  __main__.py  cli.py  watch.py
src/nexus/dashboard/: __init__.py  api.py  index.html
src/nexus/index/: __init__.py  cross_project.py  graph.py  parser.py  pipeline.py  plugins.py  scanner.py  scip.py
src/nexus/index/plugins_builtin/: __init__.py  go_plugin.py  (+1 more)
src/nexus/integrations/: __init__.py  analytics.py  base.py  ci.py  news.py  nlp.py  packages.py  security.py  vcs.py
src/nexus/rank/: __init__.py  bm25.py  embed.py  explore.py  fusion.py  packer.py  pagerank.py  tuner.py
src/nexus/refactor/: lsp.py  rename.py  semantic_edit.py
src/nexus/server/: __init__.py  mcp.py  state.py  tools_index.py  tools_integrations.py  tools_query.py  tools_refactor.py
src/nexus/session/: __init__.py  analytics.py  concepts.py  memory.py  tracker.py
src/nexus/store/: db.py  schema.sql
src/nexus/sync/: __init__.py  porter.py
src/nexus/util/: config.py  hashing.py  identifiers.py  sanitize.py
templates/: NEXUS_CLAUDE_POLICY.md
tests/: conftest.py  test_concepts.py  test_config.py  test_db.py  test_embed.py  test_explore.py  test_identifiers.py  test_lsp.py  test_memory_locked.py  test_packer.py  test_parser.py  test_parser_multilang.py  test_pipeline.py  test_sanitize.py  test_scanner.py  test_semantic_edit.py  test_state.py  test_tools.py
