[project]
name = "nexus"
version = "0.1.0"
description = "Semantic codebase graph engine — MCP server for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.3.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.3.0",
    "jedi>=0.19.0",
    "rope>=1.12.0",
]

[project.optional-dependencies]
rank = [
    "bm25s>=0.2.0",
    "scipy>=1.11.0",
    "fast-pagerank>=0.0.5",
]
watch = [
    "watchdog>=4.0",
]
ai = [
    "anthropic>=0.40.0",
]
integrations = [
    # Optional: faster HTTP for integrations (stdlib urllib used by default)
]
all = [
    "nexus[rank,watch,ai]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyright>=1.1.350",
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexus = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
